[package]
name = "pokerpoint"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-broker = "0.3.0"
actix-files = "0.2.2"
actix-web-actors = "2.0.0"
